# python-sdk

./: .dockerignore  .gitignore  CHANGELOG.md  DEVICES_SUMMARY.md  EXAMPLES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  README.rst  Test.py  app.py  credentials.py  llms-full.txt  llms.txt  pyproject.toml  setup.py
.github/scripts/: validate_examples.py
.github/workflows/: README.md  pr-validation.yml  publish-release.yml  stale.yml
docs/: CONTRIBUTING.md
examples/: README.md  blinds.py  camera.py  custom_device.py  dim_switch.py  doorbell.py  garagedoor.py  light.py  multi_switch.py  push_notification.py  smart_lock.py  speaker.py  switch.py  temperature_sensor.py  thermostat.py  tv.py
examples/airqualitysensor/: airqualitysensor_example.py
examples/blinds/: README.md  blinds_example.py
examples/camera/: README.md  camera_example.py
examples/contactsensor/: contactsensor_example.py
examples/customdevice/: README.md  customdevice_example.py
examples/dimswitch/: dimswitch_example.py
examples/doorbell/: doorbell_example.py
examples/fan/: fan_example.py
examples/garagedoor/: README.md  garage_door_example.py
examples/light/: README.md  light_example.py
examples/lock/: README.md  lock_example.py
examples/motionsensor/: README.md  motion_sensor_example.py
examples/powersensor/: powersensor_example.py
examples/speaker/: speaker_example.py
examples/switch/: README.md  (+1 more)
sinric/: __init__.py  _brightnessController.py  _brightness_controller.py  _callback_handler.py  _camera_stream_controller.py  _cbhandler.py  _colorController.py  _colorTemperature.py  _color_controller.py  _color_temperature.py  _configmanager.py  _dataTracker.py  _events.py  _jsoncommands.py  _leakyBucket.py  _leaky_bucket.py  _lockController.py  _lock_controller.py  _mainqueue.py  _modeController.py  _mode_controller.py  _piactions.py  _powerController.py  _powerLevelController.py  _power_controller.py  _power_level_controller.py  _queues.py  _rangeValueController.py  _range_value_controller.py  _signature.py  _sinric.py  _sinricdevice.py  _sinricpro.py  _sinricpro_constants.py  _sinricpro_udp.py  _sinricpro_websocket.py  _sinricprocommand.py  _sinricprosocket.py  _sinricproudp.py  _speakerController.py  (+10 more)
sinricpro/: __init__.py
(+81 files in other folders)
